--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,21 @@
 {
   "type": "module",
   "dependencies": {
-    "@elastic/elasticsearch": "^9.1.1",
+    "@elastic/elasticsearch": "^8.15.0",
     "@google-cloud/vertexai": "^1.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0"
   },
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "test_vertexai.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
