--- a/elastic/package.json
+++ b/elastic/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "@elastic/elasticsearch": "^9.1.1"
+    "@elastic/elasticsearch": "^8.15.0",
+    "dotenv": "^16.4.5"
   }
 }
